[tool.poetry]
name = "hamrobazaar"
version = "0.1.0"
description = ""
authors = ["Sulav Maharjan <sulavmaharjan63@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
python-slugify = "^6.1.2"
Sphinx = "^5.0.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
